🚀 Configure for Vercel Full-Stack Deployment
✅ Configuration Updates:
- Updated vercel.json for serverless functions
- Modified server/index.js for Vercel compatibility
- Updated API base URL for production
- Added Prisma generate to build process
- Configured CORS for production

🔧 Ready for Vercel deployment with:
- Frontend: Static build
- Backend: Serverless functions
- Database: Neon PostgreSQL

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "concurrently \"npm run server\" \"vite\"",
     "server": "nodemon server/index.js",
-    "build": "vite build",
+    "build": "npm run db:generate && vite build",
+    "vercel-build": "npm run build",
     "lint": "eslint .",
     "preview": "vite preview",
     "db:generate": "prisma generate",
