🔧 Fix MIME type error and routing issues
✅ Fixed:
- Updated vercel.json routing order
- Enhanced Vite build configuration
- Added _headers file for proper MIME types
- Simplified Vercel configuration

🚀 Ready for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,17 @@
 {
-  "name": "connecthub",
   "version": 2,
+  "name": "connecthub",
   "builds": [
-    {
-      "src": "server/index.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
-    },
     {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
       }
+    },
+    {
+      "src": "server/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -23,11 +20,11 @@
       "dest": "/server/index.js"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
