--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run server\" \"vite\"",
     "server": "nodemon server/index.js",
     "build": "npm run db:generate && vite build",
-    "vercel-build": "npm run build",
+    "vercel-build": "prisma generate && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "db:generate": "prisma generate",
